# MagniPOC

./: .gitmodules  Dockerfile  README.md
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/cpu-simulation/: Dockerfile  devcontainer.json
.devcontainer/gpu-simulation/: Dockerfile  devcontainer.json
.github/workflows/: build.yaml  deploy.yaml
scripts/: launch-teleop-keyboard.sh  launch-webots-simulation.sh  run-container.sh  run-image-transport-republish.sh
src/magni_description/: CMakeLists.txt  package.xml
src/magni_description/launch/: description_launch.py
src/magni_description/urdf/: inertial.xacro  magni.gazebo.xacro  magni.transmission.xacro  magni.urdf.xacro
src/magni_description/urdf/extrinsics/: camera_extrinsics_forward.yaml  lidar_extrinsics_top_plate_center.yaml
src/magni_description/urdf/sensors/: raspi_camera.xacro  sonar_hc-sr04.xacro  ur50_lidar.xacro  ur_c1_lidar.xacro
src/magni_webots/: CMakeLists.txt  magni_driver.xml  magni_webots.xml  package.xml
src/magni_webots/include/magni_webots/: MagniDriver.hpp
src/magni_webots/launch/: magni_breakroom_launch.py  magni_spawn.launch.py
src/magni_webots/resource/: magni_wb.urdf.xacro
src/magni_webots/src/: MagniDriver.cpp
src/magni_webots/worlds/: .break_room.wbproj  break_room.wbt
src/video_recorder/: CMakeLists.txt  package.xml
src/video_recorder/include/video_recorder/: VideRecorder.hpp  mjpeg_recorder.hpp  video_recorder.hpp  video_recorder_subscriber.hpp
src/video_recorder/src/: MJPGRecorder.cpp  VideoRecorder.cpp  main.cpp  mjpeg_recorder.cpp  video_recorder.cpp  video_recorder_subscriber.cpp
src/video_recorder/test/: CMakeLists.txt  video_recorder_subscriber_test.cpp
