<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>magni_webots</name>
  <version>0.0.1</version> <!-- Updated version -->
  <description>Package to simulate Magni robot in Webots using an existing world and magni_description.</description> <!-- Updated description -->
  <maintainer email="julioandres.bp@outlook.com">julio</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Core dependencies for this package's functionality -->
  <depend>launch</depend> <!-- For launch system itself -->
  <depend>launch_ros</depend> <!-- For ROS-specific launch integration -->
  <depend>webots_ros2_driver</depend>
  <depend>magni_description</depend> <!-- For URDF and description launch -->

  <!-- Existing dependencies, kept if still relevant or brought by others -->
  <depend>rclcpp</depend> <!-- Kept from original, though current files are Python launch -->
  <depend>geometry_msgs</depend> <!-- Kept from original -->
  <depend>pluginlib</depend> <!-- Kept from original -->


  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
